assets/scss/main.scss
/* ... */
.border-top-white {
  border-top: solid 1px #fff;
}

.border-bottom-gray {
  border-bottom: solid 1px #ccc;
}

.border-bottom-white {
  border-bottom: solid 1px #fff;
}

.text-right {
  text-align: right;
}

.clearfix {
  clear: both;
}

.border-none {
  border: none !important;
}

a, .navbar-light .navbar-nav .nav-link {


  @include themify($themes) {

    color: themed('textColor');
    background-color: transparent;

    &, &:link, &:visited, &:active, &:focus {
      color: themed('nav-link-focus-color');
    }
    &:hover {
      color: themed('nav-hover-color');
    }

  }
}

.white a {
  &:link, &:visited, &:active, &:focus, &:hover {
    text-decoration: underline;
    color: #fff;
  }
}

a.no-decoration {
  text-decoration: none !important;
}

.button {
  height: auto;
  text-align: center;
  border-radius: 5px;
  font-size: 1.2em;
  border: none;
  padding: 7px 30px 7px 30px;
  cursor: pointer;
  position: relative;
}

.button-radius-5 {
  height: auto;
  text-align: center;
  border-radius: 5px;
  font-size: 1.2em;
  border: none;
  padding: 7px 30px 7px 30px;
  cursor: pointer;
  position: relative;
  &.searchResetRedesigned {
    @include themify($themes) {
      color: themed('button-radius-5-color');
      border: themed('button-radius-5-border');
      background-color: themed('backgroundColor');
    }
  }


}

.button-radius-30 {
  height: auto;
  text-align: center;
  border-radius: 30px;
  font-size: 1.2em;
  border: none;
  padding: 7px 30px 7px 30px;
  cursor: pointer;
  position: relative;
}

.button-blue {
  background-color: #2e6dd9;
  color: #fff;
}

.button-white {
  background-color: #fff;
  color: #2e6dd9;
}

.button-shadow {
  box-shadow: 1px 1px 7px #464747;
}

.button-blue:hover {
  background-color: #0c49b0;
}

.button-white:hover {
  background-color: #ccc;
}

.button.right-arrow {
  padding-right: 80px;
}

.select-border {
  border: solid 2px #777 !important;
}

.form-control {
  border-radius: 0 !important;

  @include themify($themes) {
    box-shadow: themed('home_page_btn_box-shadow');

    border: themed('buttonBorder');
    color: themed('buttonTextColor');
    border-color: themed('buttonTextColor');
    background-color: themed('buttonColor');
    text-transform: themed('buttonTextTransform');

    &:hover {
      color: themed('buttonTextHoverColor');
      border-color: themed('buttonTextHoverColor');
      background-color: themed('buttonHoverColor');
    }
  }
}

.form-group {
  padding-bottom: 20px;
  textarea {
    resize: vertical;
    min-height: 100px;
  }
  label {
    color: #2e6dd9;
  }
}

.form-radio-label {
  color: #000;
  font-size: 0.9rem;
}

.form-check-cont {
  width: auto;
  height: 2rem;
  margin-bottom: 0.1rem;
  margin-top: 0.1rem;
}

.form-white-placeholder::placeholder {
  color: #fff;
}

pre {
  text-align: left;
  white-space: pre-line;
}

dt, dd {
  display: block;
  float: left;
  margin-top: 20px;
}

dt {
  clear: both;
}

input {
  &[type=checkbox], &[type=radio] {
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    width: 25px;
    height: 20px;
    margin: 0;
    padding: 0;
    opacity: 0;
    z-index: 100;
  }
  &[type=checkbox] + label, &[type=radio] + label {
    display: inline-block;
    position: absolute;
    top: 5px;
    left: 20px;
    width: calc(100% - 20px);
    padding-left: 30px;
    background-repeat: no-repeat;
    background-position: 0 0;
    background-image: url("../img/icons/check-back.png");
    line-height: 1.3rem;
    height: auto;
    word-break: break-all;
  }
  &[type=checkbox].white + label, &[type=radio].white + label {
    background-image: url("../img/icons/check-back-white.png");
  }
  &[type=checkbox]:checked + label, &[type=radio]:checked + label {
    background-position: 0 -641px;
  }
}

.label-counts {
  word-break: keep-all;
  font-family: "Open Sans Regular", sans-serif;
  font-size: 1em;
}

.sidebar-clear-filter-container-group {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  margin: 10px 20px 0 22px;
}

.sidebar-clear-filter-container {
  flex: 0 1 auto;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.sidebar-clear-filter-button {
  flex: 1 0 auto;
  width: 100%;
  align-items: stretch;
  align-content: center;
  text-align: center;
}

.sidebar-clear-filter {
  flex: 0 1 auto;
  margin-right: 5px;
}

.sidebar-clear-filter-order-1 {
  order: 1;
}

.sidebar-clear-filter-order-2 {
  order: 2;
}

.sidebar-clear-filter-order-3 {
  order: 3;
}

.sidebar-clear-filter-order-4 {
  order: 4;
}

.sidebar-clear-filter-order-5 {
  order: 5;
}

.sidebar-clear-filter-order-6 {
  order: 6;
}

.sidebar-clear-filter-order-7 {
  order: 7;
}

.scroll-redesign {
  overflow-y: scroll;
  @include themify($themes) {
    color: themed('scroll-redesign-color');
    background-color: themed('scroll-redesign-bg');
  }
}

.shadow-redesign {
  @include themify($themes) {
    box-shadow: themed('shadow-redesign-box-shadow');
    -webkit-box-shadow: themed('shadow-redesign-box-shadow');
  }
}

.main-search-container {
  padding-left: 20px;
  padding-right: 20px;
}

.main-search-input {
  width: 100%;
  height: 50px;
  clear: both;
  background-color: #ffffff;
}

.ukwa-hero-banner {
  min-height: 15rem;

  /* Avoid horizontal scrollbar showing up on narrow screens. */
  overflow-x: hidden;

  background-repeat: no-repeat;
  background-image: url("../img/icons/UKWA-hero-composite-final.png");
  background-size: cover;

  @include themify($themes) {
    color: themed('buttonColor');
  }

}

.main-search-input-new {
  height: 0;
  width: 10%;
  background-repeat: no-repeat;
  background-image: url("../img/icons/UKWA-hero-composite-final.png");
  background-size: cover;
}
/* ... */

